// Vitest Snapshot v1

exports[`VotingDialog > should match the snapshot with active voting 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog voting-dialog accent-color__planning-pink"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Voting
            </h2>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__cancel-button"
            >
              <label>
                Cancel voting phase
              </label>
            </button>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__stop-button"
            >
              <label>
                End voting phase
              </label>
            </button>
          </article>
          <button
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
              >
                <rect
                  height="24"
                  transform="translate(6 6)"
                  width="24"
                />
                <g
                  stroke="currentColor"
                  stroke-width="2"
                  transform="rotate(45 1.179 24.468)"
                >
                  <line
                    x1="8.5"
                    x2="8.5"
                    y2="16"
                  />
                  <line
                    x1="0.5"
                    x2="16.5"
                    y1="8"
                    y2="8"
                  />
                </g>
              </g>
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`VotingDialog > should match the snapshot with no active voting 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog voting-dialog accent-color__planning-pink"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Voting
            </h2>
            <button
              class="dialog__button"
              data-testid="voting-dialog__cumulative-voting-button"
            >
              <label>
                Allow cumulative voting
              </label>
              <div
                class="toggle toggle--active voting-dialog__toggle"
              />
            </button>
            <div
              class="dialog__button"
            >
              <label>
                Number of votes
              </label>
              <button
                class="voting-dialog__vote-button"
                data-testid="voting-dialog__minus-button"
              >
                <svg
                  height="32"
                  id="ic_minus"
                  viewBox="0 0 32 32"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="rgba(255,255,255,0)"
                    height="32"
                    id="BG"
                    width="32"
                  />
                  <g
                    data-name="Ellipse 32"
                    fill="none"
                    id="Ellipse_32"
                    stroke="#E20360"
                    stroke-width="2"
                    transform="translate(4 4)"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="12"
                      stroke="none"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      fill="none"
                      r="11"
                    />
                  </g>
                  <g
                    data-name="Rechteck 573"
                    fill="#fff"
                    id="Rechteck_573"
                    stroke="#E20360"
                    stroke-width="1"
                    transform="translate(12 15)"
                  >
                    <rect
                      height="2"
                      rx="1"
                      stroke="none"
                      width="8"
                    />
                    <rect
                      fill="none"
                      height="1"
                      rx="0.5"
                      width="7"
                      x="0.5"
                      y="0.5"
                    />
                  </g>
                </svg>
              </button>
              <label
                class="voting-dialog__vote-label"
              >
                5
              </label>
              <button
                class="voting-dialog__vote-button"
                data-testid="voting-dialog__plus-button"
              >
                <svg
                  height="32"
                  id="ic_plus"
                  viewBox="0 0 32 32"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="rgba(255,255,255,0)"
                    height="32"
                    id="BG"
                    width="32"
                  />
                  <g
                    data-name="Ellipse 32"
                    fill="none"
                    id="Ellipse_32"
                    stroke="#E20360"
                    stroke-width="2"
                    transform="translate(4 4)"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="12"
                      stroke="none"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      fill="none"
                      r="11"
                    />
                  </g>
                  <g
                    data-name="Rechteck 573"
                    fill="#fff"
                    id="Rechteck_573"
                    stroke="#E20360"
                    stroke-width="1"
                    transform="translate(12 15)"
                  >
                    <rect
                      height="2"
                      rx="1"
                      stroke="none"
                      width="8"
                    />
                    <rect
                      fill="none"
                      height="1"
                      rx="0.5"
                      width="7"
                      x="0.5"
                      y="0.5"
                    />
                  </g>
                  <g
                    data-name="Rechteck 574"
                    fill="#E20360"
                    id="Rechteck_574"
                    stroke="#E20360"
                    stroke-width="1"
                    transform="translate(17 12) rotate(90)"
                  >
                    <rect
                      height="2"
                      rx="1"
                      stroke="none"
                      width="8"
                    />
                    <rect
                      fill="none"
                      height="1"
                      rx="0.5"
                      width="7"
                      x="0.5"
                      y="0.5"
                    />
                  </g>
                </svg>
              </button>
            </div>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__start-button"
            >
              <label>
                Start voting phase
              </label>
            </button>
          </article>
          <button
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
              >
                <rect
                  height="24"
                  transform="translate(6 6)"
                  width="24"
                />
                <g
                  stroke="currentColor"
                  stroke-width="2"
                  transform="rotate(45 1.179 24.468)"
                >
                  <line
                    x1="8.5"
                    x2="8.5"
                    y2="16"
                  />
                  <line
                    x1="0.5"
                    x2="16.5"
                    y1="8"
                    y2="8"
                  />
                </g>
              </g>
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
